fix: replace footer on safari browsers

--- a/src/components/Layout/Footer/styles.css
+++ b/src/components/Layout/Footer/styles.css
@@ -4,4 +4,5 @@
 	padding: 1em;
 	background-color: #FFF;
 	color: #999;
+	flex-shrink: 0;
 }
