--- a/src/components/Layout/Root/theme.scss
+++ b/src/components/Layout/Root/theme.scss
@@ -17,4 +17,5 @@
 
 .panel {
 	justify-content: flex-start !important;
+	-webkit-overflow-scrolling: touch !important;
 }
