--- a/src/components/Welcome/styles.css
+++ b/src/components/Welcome/styles.css
@@ -2,6 +2,7 @@
 
 .content {
 	width: 100%;
+	flex-shrink: 0;
 	:global(header) {
 		height: 100%;
 		min-height: 1000px;
